# src/main/java/csulzc/medical_big_data_cloud/module/dto/request/user/PasswordChangeRequest.java
@@ -1,15 +1,0 @@
-package csulzc.medical_big_data_cloud.module.dto.request.user;
-
-import jakarta.validation.constraints.NotBlank;
-import jakarta.validation.constraints.Size;
-import lombok.Data;
-
-@Data
-public class PasswordChangeRequest {
-    @NotBlank(message = "旧密码不能为空")
-    private String oldPassword;
-
-    @NotBlank(message = "新密码不能为空")
-    @Size(min = 6, max = 20, message = "新密码长度必须在6-20之间")
-    private String newPassword;
-}
